--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
     <ul id="todobox">
       
     </ul>
-    <div id="quote"></div>
     <div id="temp"></div>
   </div>
 
   <script async src="./js/clock.js"></script>
   <script async src="./js/backgroud.js"></script>
   <script async src="./js/name.js"></script>
-  <script async src="./js/todo.js"></script>
+  <script defer src="./js/todo.js"></script>
 </body>
 </html>
