--- a/index.html
+++ b/index.html
@@ -25,12 +25,17 @@
     <ul id="todobox">
       
     </ul>
-    <div id="temp"></div>
+    <div id="temp">
+      <span></span>
+      <span class="cloud"></span>
+      <img class="cloudIcon">
+    </div>
   </div>
 
   <script async src="./js/clock.js"></script>
   <script async src="./js/backgroud.js"></script>
   <script async src="./js/name.js"></script>
   <script defer src="./js/todo.js"></script>
+  <script defer src="./js/temp.js"></script>
 </body>
 </html>
